force-app/main/default/objects/CampaignProduct__c/CampaignProduct__c.object-meta.xml
<CustomObject>
    <description>Objeto que armazena produtos ( Produto, Família ou Fornecedor ) da Campanha.</description>
    
    <label>Produto da Campanha</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos da Campanha</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>