force-app/main/default/objects/CampaignProduct__c/fields/AvailableQuantity__c.field-meta.xml
<CustomField>
    <fullName>AvailableQuantity__c</fullName>
    <formula>MaxQuantity__c -  UsedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade Disponível</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>