force-app/main/default/objects/CampaignProduct__c/fields/CanActivateRules__c.field-meta.xml
<CustomField>
    <fullName>CanActivateRules__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Caso este campo esteja marcado, o produto será considerado para ativar as regra da campanha.</description>
    <inlineHelpText>Caso este campo esteja marcado, o produto será considerado para ativar as regra da campanha.</inlineHelpText>
    <label>Este produto ativa as regras?</label>
    <type>Checkbox</type>
</CustomField>