force-app/main/default/objects/CampaignProduct__c/fields/CanReceiveDiscount__c.field-meta.xml
<CustomField>
    <fullName>CanReceiveDiscount__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Caso este campo esteja marcado, ele vai receber o desconto estipulado nas regras da campanha.</description>
    <inlineHelpText>Caso este campo esteja marcado, ele vai receber o desconto estipulado nas regras da campanha.</inlineHelpText>
    <label>Este produto recebe desconto?</label>
    <type>Checkbox</type>
</CustomField>