force-app/main/default/objects/CampaignProduct__c/fields/ComercialName__c.field-meta.xml
<CustomField>
    <fullName>ComercialName__c</fullName>
    <label>Nome Comercial</label>
    <length>255</length>
    <inlineHelpText>Nome comercial dos produtos da ForcaAgro</inlineHelpText>
    <type>Text</type>
</CustomField>