force-app/main/default/objects/CampaignProduct__c/fields/ExternalIdIndex__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdIndex__c</fullName>
    <description>Campo para armazenar nome do Produto da Campanha e não permitir criação de Produto duplicado</description>
    <externalId>true</externalId>
    <label>ExternalIdIndex</label>
    <length>140</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>