force-app/main/default/objects/CampaignProduct__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Familia</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Produtos da Campanha</relationshipLabel>
    <relationshipName>FamiliaCampanha</relationshipName>
    <type>Lookup</type>
</CustomField>