force-app/main/default/objects/CampaignProduct__c/fields/MaxQuantity__c.field-meta.xml
<CustomField>
    <fullName>MaxQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade limite</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>