force-app/main/default/objects/CampaignProduct__c/fields/UnitMeasurement__c.field-meta.xml
<CustomField>
    <fullName>UnitMeasurement__c</fullName>
    <label>Unidade de Medida.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>