force-app/main/default/objects/CampaignProduct__c/fields/UsedQuantity__c.field-meta.xml
<CustomField>
    <fullName>UsedQuantity__c</fullName>
    <label>Saldo Utilizado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>