force-app/main/default/objects/CampaignProduct__c/recordTypes/ProdutoCampanha.recordType-meta.xml
<RecordType>
    <fullName>ProdutoCampanha</fullName>
    <active>false</active>
    <label>Produto da Campanha</label>
</RecordType>