force-app/main/default/objects/CampaignProduct__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>MaxQuantity__c</columns>
    <columns>UsedQuantity__c</columns>
    <columns>AvailableQuantity__c</columns>
    <columns>UnitMeasurement__c</columns>
    <columns>Product2__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Family__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>